--- a/assets/css/menu/menu.css
+++ b/assets/css/menu/menu.css
@@ -3,3 +3,17 @@
   justify-content: space-between;
   align-items: center;
 }
+
+.menu__list{
+  display: flex;
+  list-style: none
+}
+
+.menu__item{
+  margin-left: 4rem;
+}
+
+.menu__item a{
+  text-decoration: none;
+  color: var(--neutral)
+}
