--- a/assets/css/started/started.css
+++ b/assets/css/started/started.css
@@ -34,10 +34,17 @@
   margin-top: 1rem;
 
   color: var(--neutral);
+  font-weight: 700;
   background: linear-gradient(45deg, var(--ctaCYAN), var(--ctaBlue));
 
   border: 0;
   border-radius: 50px;
+}
+
+.started__button:hover{
+  transition: 0.5s;
+  font-weight: 400;
+  background: var(--ctaBlue);
 }
 
 .started__bgCurvy{
