--- a/assets/css/features/features.css
+++ b/assets/css/features/features.css
@@ -1,5 +1,4 @@
 .features{
-  width: 70%;
   margin: 10rem auto 0;
 
   padding: 3rem;
@@ -10,8 +9,7 @@
 }
 
 .feature__img{
-  width: 83px;
-  height: 83px;
+  width: 75px;
 }
 
 .features__items{
@@ -26,4 +24,17 @@
   font-weight: 400;
   font-size: 0.875rem;
   color: var(--text);
+}
+
+@media(max-width: 394px){
+  .features{
+    width: 90%;
+    margin: 1rem auto 0;
+
+    display: flex;
+    flex-direction: column;
+  }
+  .features__items{
+    margin-bottom: 2rem;
+  }
 }
